--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -15,11 +15,14 @@
         </nav>
         <h3>Project</h3>
         <dl>
-            <dt>Encyclopedia page</dt>
-            <dd><a href="encyclopedia.html">Encyclopedia on Sylvia Plath</a></dd>
+            <dt><a href="encyclopedia.html">Encyclopedia page</a></dt>
+            <dd>Encyclopedia on Sylvia Plath</dd>
             <br>
-            <dt>Practiced all Text Formatting Tags </dt>
-            <dd><a href="txttags.html">Text Format Tags</a></dd>
+            <dt><a href="txttags.html">Text Format Tags</a></dt>
+            <dd>Practiced all Text Formatting Tags </dd>
+            <br>
+            <dt><a href="portfolio.html">My Portfolio</a></dt>
+            <dd>Created my portfolio: created links to sections within the same page in HTML, used center tag.</dd>
         </dl>
     </body>
 </html>
